--- a/hattrick.html
+++ b/hattrick.html
@@ -74,6 +74,9 @@
         </thead>
         <tbody>
             <tr>
+                <td colspan="7" style="text-align: center">GRUPO A</td>
+            </tr>
+            <tr>
                 <td><input id="teamID_0" type="number" value="1455330" style="width: 6em;"></td>
                 <td><img id="escudo_0" src="" alt="" style="height:64px;"></td>
                 <td><a id="nombre_0"></a></td>
@@ -81,7 +84,7 @@
                 <td><p id="estadio_0"></p></td>
                 <td><p id="proxpartido_0"></p></td>
                 <td><p id="antepartido_0"></p></td>
-        </tr>
+            </tr>
             <tr>
                 <td><input id="teamID_1" type="number" value="1455330" style="width: 6em;"></td>
                 <td><img id="escudo_1" src="" alt="" style="height:64px;"></td>
@@ -128,6 +131,9 @@
                 <td><p id="antepartido_5"></p></td>
             </tr>
             <tr>
+                <td colspan="7" style="text-align: center">GRUPO B</td>
+            </tr>
+            <tr>
                 <td><input id="teamID_6" type="number" value="1455330" style="width: 6em;"></td>
                 <td><img id="escudo_6" src="" alt="" style="height:64px;"></td>
                 <td><a id="nombre_6"></a></td>
@@ -163,6 +169,81 @@
                 <td><p id="proxpartido_9"></p></td>
                 <td><p id="antepartido_9"></p></td>
             </tr>
+            <tr>
+                <td><input id="teamID_10" type="number" value="1455330" style="width: 6em;"></td>
+                <td><img id="escudo_10" src="" alt="" style="height:64px;"></td>
+                <td><a id="nombre_10"></a></td>
+                <td><p id="ranking_10"></p></td>
+                <td><p id="estadio_10"></p></td>
+                <td><p id="proxpartido_10"></p></td>
+                <td><p id="antepartido_10"></p></td>
+            </tr>
+            <tr>
+                <td><input id="teamID_11" type="number" value="1455330" style="width: 6em;"></td>
+                <td><img id="escudo_11" src="" alt="" style="height:64px;"></td>
+                <td><a id="nombre_11"></a></td>
+                <td><p id="ranking_11"></p></td>
+                <td><p id="estadio_11"></p></td>
+                <td><p id="proxpartido_11"></p></td>
+                <td><p id="antepartido_11"></p></td>
+            </tr>
+            <tr>
+                <td colspan="7" style="text-align: center">GRUPO C</td>
+            </tr>
+            <tr>
+                <td><input id="teamID_12" type="number" value="1455330" style="width: 6em;"></td>
+                <td><img id="escudo_12" src="" alt="" style="height:64px;"></td>
+                <td><a id="nombre_12"></a></td>
+                <td><p id="ranking_12"></p></td>
+                <td><p id="estadio_12"></p></td>
+                <td><p id="proxpartido_12"></p></td>
+                <td><p id="antepartido_12"></p></td>
+            </tr>
+            <tr>
+                <td><input id="teamID_13" type="number" value="1455330" style="width: 6em;"></td>
+                <td><img id="escudo_13" src="" alt="" style="height:64px;"></td>
+                <td><a id="nombre_13"></a></td>
+                <td><p id="ranking_13"></p></td>
+                <td><p id="estadio_13"></p></td>
+                <td><p id="proxpartido_13"></p></td>
+                <td><p id="antepartido_13"></p></td>
+            </tr>
+            <tr>
+                <td><input id="teamID_14" type="number" value="1455330" style="width: 6em;"></td>
+                <td><img id="escudo_14" src="" alt="" style="height:64px;"></td>
+                <td><a id="nombre_14"></a></td>
+                <td><p id="ranking_14"></p></td>
+                <td><p id="estadio_14"></p></td>
+                <td><p id="proxpartido_14"></p></td>
+                <td><p id="antepartido_14"></p></td>
+            </tr>
+            <tr>
+                <td><input id="teamID_15" type="number" value="1455330" style="width: 6em;"></td>
+                <td><img id="escudo_15" src="" alt="" style="height:64px;"></td>
+                <td><a id="nombre_15"></a></td>
+                <td><p id="ranking_15"></p></td>
+                <td><p id="estadio_15"></p></td>
+                <td><p id="proxpartido_15"></p></td>
+                <td><p id="antepartido_15"></p></td>
+            </tr>
+            <tr>
+                <td><input id="teamID_16" type="number" value="1455330" style="width: 6em;"></td>
+                <td><img id="escudo_16" src="" alt="" style="height:64px;"></td>
+                <td><a id="nombre_16"></a></td>
+                <td><p id="ranking_16"></p></td>
+                <td><p id="estadio_16"></p></td>
+                <td><p id="proxpartido_16"></p></td>
+                <td><p id="antepartido_16"></p></td>
+            </tr>
+            <tr>
+                <td><input id="teamID_17" type="number" value="1455330" style="width: 6em;"></td>
+                <td><img id="escudo_17" src="" alt="" style="height:64px;"></td>
+                <td><a id="nombre_17"></a></td>
+                <td><p id="ranking_17"></p></td>
+                <td><p id="estadio_17"></p></td>
+                <td><p id="proxpartido_17"></p></td>
+                <td><p id="antepartido_17"></p></td>
+            </tr>
         </tbody>
     </table>
 
@@ -171,20 +252,38 @@
 
 <script>
     // cargamos los equipos de la tabla... esto debería hacer con un for each en el html y tal...
+    // -- GRUPO A --
     // Hakuna FC España (1455330)
-    // Tottenham Toledo (1436780)
-    // Nets Brooklyn NY Toledo (779524)
-    // Triton Imperial (491218)
-    // C.P. Amanecer (774953)
-    // Jamurrillos FC (124382)
-    // Union Deportiva Almeriense 2020 (993938)
+    // Ferbellomoverzas C.F (988128)
     // FC AroNico (1593360)
+    // C.P. Amanecer (774953)
+    // The Three Crows (151381)
+    // Rocinante C.F. (1417144)
+
+    // -- GRUPO B --
+    // Tottenham Toledo (1436780)
+    // Triton Imperial (491218)
+    // SnakeII (773526)
+    // FC Cigaleros (1581551)
+    // Union Deportiva Almeriense 2020 (993938)
+    // Jamurrillos FC (124382)
+
+    // -- GRUPO C --
+    // Nets Brooklyn NY Toledo (779524)
     // Danwikis (1432060)
-    // Danwikis (1432060)
-    // Bordados Catole (47541)
+    // F.C. Vendetta 1.976 (1582966)
     // Carabao 1990 F.C. (308879)
+    // Peaky Blinders F. C. (1587626)
+    // Wolves Indomables (47829)
+    
+    // -- Otros --
+    // Bordados Catole (47541)
+    // Cruzcampeones - Alejo
+
     // var teamIDs = [779524];
-    var teamIDs = [1455330, 1436780, 779524, 491218, 774953, 124382, 993938, 1593360, 1432060, 988128];//, 47541, 308879];
+    var teamIDs = [1455330,  988128, 1593360,  774953,  151381, 1417144, 
+                   1436780,  491218,  773526, 1581551,  993938,  124382, 
+                    779524, 1432060, 1582966,  308879, 1587626,   47829];
     for(var i=0; i<teamIDs.length; i++){ document.getElementById("teamID_"+i).value = teamIDs[i]; cargaEquipo(i); }
 
     function getNombre(docuweb) {
@@ -193,11 +292,13 @@
 
     function getEscudo(docuweb) {
         var escudo;
-        if (docuweb.getElementsByClassName("teamLogo")[0].children[0].tagName == "IMG"){ // bot
-            escudo = docuweb.getElementsByClassName("teamLogo")[0].children[0].src;
-            escudo = escudo.substring(escudo.lastIndexOf("http"),escudo.length);
-        }else if (docuweb.getElementsByClassName("teamLogo")[0].children[0].tagName == "A"){ // no bott
-            escudo = docuweb.getElementsByClassName("teamLogo")[0].children[0].href;
+        if (docuweb.getElementsByClassName("teamLogo").length > 0){
+            if (docuweb.getElementsByClassName("teamLogo")[0].children[0].tagName == "IMG"){ // bot
+                escudo = docuweb.getElementsByClassName("teamLogo")[0].children[0].src;
+                escudo = escudo.substring(escudo.lastIndexOf("http"),escudo.length);
+            }else if (docuweb.getElementsByClassName("teamLogo")[0].children[0].tagName == "A"){ // no bot
+                escudo = docuweb.getElementsByClassName("teamLogo")[0].children[0].href;
+            }
         }
         return escudo;
     }
