--- a/entrevista.html
+++ b/entrevista.html
@@ -63,10 +63,10 @@
         </h2>
 
         <p class="intro">
-            Sábado 9 de enero de 2021. Una terrible nevada asola la ciudad imperial de Toledo al igual que lo hace en
+            <strong>Sábado 9 de enero de 2021</strong>. Una terrible nevada asola la ciudad imperial de Toledo al igual que lo hace en
             gran parte de la península ibérica.
             <br>
-            Con dificultades, un aguerrido periodista consigue adentrarse en el estadio conocido como “La Leonera” (ID:
+            Con dificultades, un aguerrido periodista consigue adentrarse en el estadio conocido como "La Leonera" (ID:
             1451892). Tras las pertinentes medidas de seguridad, es conducido al despacho presidencial Hakunístico. La
             puerta de éste se abre y deja salir una última melodía de quien parecen Guided By Voices o algún otro
             conjunto de rock alternativo del siglo pasado. El entrevistador entra y toma asiento.
@@ -131,7 +131,7 @@
             4 - ¿Cuál es tu deseo/os no satisfechos en Hattrick?
         </p>
         <p class="answer">
-            Mmm no sé, me temo que no tengo, soy un jugador muy “casual” (voz inglesa).
+            Mmm no sé, me temo que no tengo, soy un jugador muy "casual" (voz inglesa).
         </p>
 
 
@@ -139,7 +139,7 @@
             5 - ¿Cuándo fue la última vez que lloraste?
         </p>
         <p class="answer">
-            El otro día casi lloro con una escena de “Soul”, de Pixar, pero aguanté como un tipo duro. (Confieso que soy
+            El otro día casi lloro con una escena de "Soul", de Pixar, pero aguanté como un tipo duro. (Confieso que soy
             de lágrima fácil jaja).
         </p>
 
@@ -167,8 +167,8 @@
             8 - ¿Cuál es tu forma de jugar favorita de jugar en Hattrick y cual detestas más que te jueguen?
         </p>
         <p class="answer">
-            Suelo jugar “Atacar por el centro”, y a veces alterno con “Atacar por las bandas”. Odio que me jueguen
-            “Contraataques” porque es una auténtica lotería, aunque por ello mismo reconozco que cuando no veo ninguna
+            Suelo jugar "Atacar por el centro", y a veces alterno con "Atacar por las bandas". Odio que me jueguen
+            "Contraataques" porque es una auténtica lotería, aunque por ello mismo reconozco que cuando no veo ninguna
             opción de ganar yo también la uso.
         </p>
 
@@ -201,13 +201,13 @@
             12 - ¿Película, comida, bebida, canción y villano favorito?
         </p>
         <p class="answer">
-            Película: ”El día de la bestia” de Alex de la Iglesia.
+            Película: "El día de la bestia" de Alex de la Iglesia.
             <br>
             Comida: Paella, por ejemplo.
             <br>
             Bebida: Sin alcohol, agua; con alcohol, sidra.
             <br>
-            Canción: “Golden Brown” de The Stranglers (qué difícil escoger sólo una).
+            Canción: "Golden Brown" de The Stranglers (qué difícil escoger sólo una).
             <br>
             Villano: El malvado pirata-zombie LeChuck!!
         </p>
@@ -247,7 +247,7 @@
         </p>
         <p class="answer">
             Es un señor con un bate con pinchos, ¿no? jaja. La verdad es que apenas he visto, leído o jugado The Walking
-            Dead, pero me figuro para qué usa el bate (PD, creo que su nombre es “Lucille”).
+            Dead, pero me figuro para qué usa el bate (PD, creo que su nombre es "Lucille").
         </p>
 
 
@@ -281,10 +281,10 @@
             21 - ¿Última película y última serie que has visto?
         </p>
         <p class="answer">
-            Película: “Soul” de Pixar, está bastante bien. Esta vez Pixar ha pasado olímpicamente del público infantil
+            Película: "Soul" de Pixar, está bastante bien. Esta vez Pixar ha pasado olímpicamente del público infantil
             jaja, creo que un niño se aburriría viéndola.
             <br>
-            Serie: “Gambito de dama”, está bien, pero no es para tanto como la han puesto; me esperaba algo más de
+            Serie: "Gambito de dama", está bien, pero no es para tanto como la han puesto; me esperaba algo más de
             ajedrez, nivel básico por menos, algo más técnico sobre el juego.
         </p>
 
@@ -293,7 +293,7 @@
             22 - ¿Estás leyendo algo ahora?
         </p>
         <p class="answer">
-            No, ahora se me van las horas del día volando. Hace mucho tiempo que dejé a medias “1984” de George Orwell,
+            No, ahora se me van las horas del día volando. Hace mucho tiempo que dejé a medias "1984" de George Orwell,
             tan vigente hoy día. Me desplacé y por despiste no me llevé el libro conmigo.
         </p>
 
@@ -302,8 +302,8 @@
             23 - ¿Jordan o LeBron y por qué?
         </p>
         <p class="answer">
-            No me gusta el baloncesto. Escogeré a Jordan por la peli de mi infancia “Space Jam” jaja. ¡Ojo! que
-            supuestamente este año van a sacar “Space Jam 2” con LeBron de protagonista.
+            No me gusta el baloncesto. Escogeré a Jordan por la peli de mi infancia "Space Jam" jaja. ¡Ojo! que
+            supuestamente este año van a sacar "Space Jam 2" con LeBron de protagonista.
         </p>
 
 
@@ -321,11 +321,11 @@
             25 - ¿Por qué (filosóficamente hablando)?
         </p>
         <p class="answer">
-            Lo primero que me ha venido a la cabeza es: “¿Por qué no?”, pero me parece ir a lo fácil jaja, aunque me
+            Lo primero que me ha venido a la cabeza es: "¿Por qué no?", pero me parece ir a lo fácil jaja, aunque me
             parece una gran respuesta a esa pregunta.
             <br>
-            Lo segundo, es: “Porque mi objetivo es ser feliz”. Si esa respuesta no encaja con la pregunta, entonces la
-            pregunta nunca debió ser formulada. “¡¡Hala!!” dijo él lanzando el boli al aire al tiempo que se echaba la
+            Lo segundo, es: "Porque mi objetivo es ser feliz". Si esa respuesta no encaja con la pregunta, entonces la
+            pregunta nunca debió ser formulada. "¡¡Hala!!" dijo él lanzando el boli al aire al tiempo que se echaba la
             chaqueta al hombro con una sonrisa magnánima.
         </p>    
 
