--- a/entrevista.html
+++ b/entrevista.html
@@ -82,7 +82,7 @@
             llevo al mando de este insigne club desde su fundación en la temporada 17, exactamente el 17 de julio de
             2006. Por aquel entonces yo contaba sólo con 16 primaveras y debido a ello, muchos vaticinaban mi fracaso…
             <br>
-            Se levanta de la silla, se dirige hacia el ventanal que da al terreno de juego y observa a través de ella.
+            Se levanta de la silla, se dirige hacia el ventanal que da al terreno de juego y observa a través de él.
             Pequeña pausa dramática.
             <br>
             — ¡Se equivocaban! — brama mientras golpea el cristal. — He de reconocer que el avance de nuestro modesto
