--- a/entrevista.html
+++ b/entrevista.html
@@ -347,7 +347,7 @@
                 Disfruta de la vida, es lo único que hay y pasa muy rápido. Pasarás momentos difíciles, pero el futuro 
                 te reserva cosas preciosas exclusivamente para ti. Y no te dejes doblegar nunca, nadie es más importante que tú.
                 <br>
-                Y toma este almanaque deportivo...
+                Y toma este almanaque deportivo, Marty...
             </p>
 
 
